--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:JTn7z1jRW24feZzmyvaNtV1U86XXCvhAFBXAfxdhsQs=
 APP_DEBUG=true
-APP_URL=http://54.147.207.203/
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
